# mem-back

./: .env-example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
notebooks/: RAG.ipynb  VOtesting.ipynb  agent.ipynb  chatbot.ipynb  naranara.ipynb  retriever.ipynb  tool_model.ipynb
src/: custom_tools.py  data_types.py  documents.json  nanan.py  old_rag_model.py  reAct_agent.py  retriever.py  testing_agent.py
